ajustes no paragrafo do header

--- a/style/style.css
+++ b/style/style.css
@@ -55,10 +55,11 @@ header > p {
     font-family: var(--fonte-padrao);
     font-size: 1.2em;
     color: white;
-    padding-right: 10px;
     max-width: 500px;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-bottom: 50px;    
     margin: auto;
-    padding-bottom: 20px;
     text-shadow: 2px 2px 0px #0000003a;
 }
 
